# Performance-Experiments

./: .gitignore  CMakeLists.txt  LICENSE  NOTICES.txt  README.md
bench/: abMemsets.cpp  bMemsets.cpp
bench/lib/: abMemsets.cpp  bMemsets.cpp
benchmark/: CMakeLists.txt  aMLIRMemsets.cpp  aMemsets.cpp  bMemsets.cpp
exec/: expr-opt.cpp
include/: CMakeLists.txt
include/Dialect/: CMakeLists.txt  ExptDialect.h  ExptDialect.td  ExptOps.h  ExptOps.td
include/Pipeline/: Pipelines.h
include/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Utils/: memset.hpp
lib/: CMakeLists.txt  memset.hpp
lib/Dialect/: CMakeLists.txt  ExptDialect.cpp  ExptOps.cpp
lib/Pipeline/: CMakeLists.txt  Pipelines.cpp
lib/Transforms/: CMakeLists.txt  ExptDummyPass.cpp
scripts/: rename-project.sh
src/: hi.cpp  hi.hpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  tHi.cpp  tMemsets.cpp
test/Expt/: dummy.mlir
test/lib/: tMemsets.cpp
tools/: CMakeLists.txt
tools/expt-opt/: CMakeLists.txt  expt-opt.cpp
unittest/: CMakeLists.txt  tDummy.cpp  tMemsets.cpp
